--- a/Ayudantia7/A7_prep_ejercicio2.Rmd
+++ b/Ayudantia7/A7_prep_ejercicio2.Rmd
@@ -98,7 +98,7 @@ rm(list = ls()) #Limpiamos la memoria
 #Instalamos liberías de trabajo:
 #install.packages("dplyr")#Para manipulación de datos
 #install.packages("car")#Funciones para estimar regresiones
-#install.packages("readstata13") #lectura/importar de bases de datos en stata
+#install.packages("haven") #lectura/importar de bases de datos en stata
 #install.packages("stargazer") #Paquete que nos permite visualizar regresiones
 #install.packages("skimr") #Paquete de exploración de datos
 #install.packages("texreg") #visualizar regresiones
